testcases/error/unknown_port.veryl
module unknown_port {
    inst u: unknown_port2 (
        a: 1,
    );
}

module unknown_port2 {}
